syntax = "proto3";

package logs;

import "google/protobuf/timestamp.proto";

service LogsService {
    rpc Logs(LogRequest) returns (stream Log);
}

message LogRequest {
  string execution_id = 2;
}



message Log{

  google.protobuf.Timestamp time = 1;
  string content = 2;
  bool error = 	3;

  string type = 4;
  string source = 5;

  string version = 6;

  map<string, string> metadata = 7;
}


// CloudLogsService client will be used in cloud adapter in logs server
// CloudLogsService server will be implemented on cloud side
service CloudLogsService {
    rpc Stream(stream Log) returns (StreamResponse);
    rpc Logs(CloudLogRequest) returns (stream Log);
}

message CloudLogRequest {
  string environment_id = 1;
  string execution_id = 2;
  string test_name = 3; 
}


message StreamResponse {
	string message = 1;
	StreamResponseStatus status = 2;
}

enum StreamResponseStatus {
  Completed = 0;
  Failed = 1;
}
